--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.2",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1"
   },
